[LAYOUT] updated scss and layout issues

--- a/app/stylesheets/_defaults.scss
+++ b/app/stylesheets/_defaults.scss
@@ -41,7 +41,7 @@ html {
 
 body {
   @extend .serif;
-  color: $base; }
+}
 
 /* Selected Text -------------------------------------------------------------- */
 /* -moz- must be declared separately */
